# card_number_customizations

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
card_number_customizations/: hooks.py  modules.txt
card_number_customizations/config/: desktop.py  docs.py
card_number_customizations/public/js/: custom.js
